--- a/pagina-de-prueba.html
+++ b/pagina-de-prueba.html
@@ -6,6 +6,8 @@
     <body> 
        <h1> primera prueba</h1>
         <p> aqui probare que tal me va viendo los cambios hechos directamente en mi repositorio de github</p>
+        <h2> que pudo hacer aparte de esto?</h2>
+        <p> pues no mucho la verdad solo era para probar los code spaces de github, muy reconfortantes la verdad </p>
 
     </body>
 </html>
